# robot_autonom

./: README.md
new_comany_robot/src/: Readme
new_comany_robot/src/bringup_sid/: CMakeLists.txt  package.xml
new_comany_robot/src/bringup_sid/config/: sid_rviz.rviz
new_comany_robot/src/bringup_sid/launch/: display_sid.launch.py  display_sid_model.launch.py  gazebo_sid.launch.xml  gazebo_sid_model.launch.xml  robot.launch.py  rplidar.launch.py
new_comany_robot/src/bringup_sid/world/: world1_sid  world_sid.world
new_comany_robot/src/sid_discription/: CMakeLists.txt  package.xml
new_comany_robot/src/sid_discription/config/: sid_rviz.rviz
new_comany_robot/src/sid_discription/meshes/: base_link.stl  body_urdf.stl  head_urdf.stl
new_comany_robot/src/sid_discription/readme/: 1_urdf creation
new_comany_robot/src/sid_discription/urdf/: comm_prop.xacro  lidar_link.xacro  mob_gazebo.xacro  sid.urdf.xacro  sid_model.urdf.xacro  sid_model_gazebo.xacro
new_comany_robot/src/sid_discription/world/: puzzle.world
