cmake_minimum_required(VERSION 3.8)
project(sid_discription)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

install(
  DIRECTORY meshes urdf config
  DESTINATION share/sid_discription/
)

ament_package()